Fix spacing in control bar

--- a/src/styles/_sicp.scss
+++ b/src/styles/_sicp.scss
@@ -167,6 +167,7 @@ $sicp-content-lr-padding: 6em;
 
   .sicp-code-snippet {
     margin: 10px 0;
+    line-height: 1;
 
     .sicp-code-snippet-open {
       width: 100vw;
